--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Ethereum Node Status page",
   "main": "index.js",
   "scripts": {
+    "lint": "semistandard",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server -d --history-api-fallback --hot --inline --progress --colors --port 3000",
     "build": "NODE_ENV=production webpack --progress --colors"
@@ -16,16 +17,11 @@
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
+    "babel-runtime": "^6.5.0",
+    "classnames": "^2.2.3",
     "css-loader": "^0.23.1",
     "file-loader": "^0.8.5",
     "postcss-loader": "^0.8.1",
-    "rucksack-css": "^0.8.5",
-    "style-loader": "^0.13.0",
-    "webpack": "^1.12.14",
-    "webpack-dev-server": "^1.14.1",
-    "webpack-hot-middleware": "^2.7.1",
-    "babel-runtime": "^6.5.0",
-    "classnames": "^2.2.3",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-hot-loader": "^1.3.0",
@@ -33,6 +29,15 @@
     "react-router": "^2.0.0",
     "react-router-redux": "^4.0.0",
     "redux": "^3.3.1",
-    "redux-actions": "^0.9.1"
+    "redux-actions": "^0.9.1",
+    "rucksack-css": "^0.8.5",
+    "semistandard": "^7.0.5",
+    "style-loader": "^0.13.0",
+    "webpack": "^1.12.14",
+    "webpack-dev-server": "^1.14.1",
+    "webpack-hot-middleware": "^2.7.1"
+  },
+  "dependencies": {
+    "dapp-styles": "^0.2.2"
   }
 }
