--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "index.js",
   "scripts": {
     "lint": "semistandard",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Error: no test specified\" && exit 0",
     "start": "webpack-dev-server -d --history-api-fallback --hot --inline --progress --colors --port 3000",
-    "build": "NODE_ENV=production webpack --progress --colors"
+    "build": "NODE_ENV=production webpack --progress --colors",
+    "commit": "commit-wizard"
   },
   "license": "MIT",
   "devDependencies": {
@@ -22,6 +23,7 @@
     "css-loader": "^0.23.1",
     "file-loader": "^0.8.5",
     "postcss-loader": "^0.8.1",
+    "pre-git": "^3.8.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-hot-loader": "^1.3.0",
@@ -39,5 +41,17 @@
   },
   "dependencies": {
     "dapp-styles": "^0.2.2"
+  },
+  "config": {
+    "pre-git": {
+      "pre-commit": [],
+      "pre-push": [
+        "npm run lint",
+        "npm run test"
+      ],
+      "post-commit": [],
+      "post-checkout": [],
+      "post-merge": []
+    }
   }
 }
