--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "rucksack-css": "^0.8.5",
     "semistandard": "^7.0.5",
     "style-loader": "^0.13.0",
+    "url-loader": "^0.5.7",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1",
     "webpack-hot-middleware": "^2.7.1"
