--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "classnames": "^2.2.3",
     "css-loader": "^0.23.1",
     "file-loader": "^0.8.5",
+    "less": "^2.6.1",
     "less-loader": "^2.2.3",
     "postcss-loader": "^0.8.1",
     "pre-git": "^3.8.1",
