Avoid commiting to master

--- a/package.json
+++ b/package.json
@@ -49,7 +49,9 @@
   },
   "config": {
     "pre-git": {
-      "pre-commit": [],
+      "pre-commit": [
+        "./scripts/check-master.sh"
+      ],
       "pre-push": [
         "npm run lint",
         "npm run test"
