--- a/package.json
+++ b/package.json
@@ -59,8 +59,8 @@
     "bytes": "2.3.0",
     "dapp-styles": "^0.2.2",
     "format-number": "2.0.1",
+    "lodash": "4.11.1",
     "rlp": "2.0.0",
-    "underscore": "1.8.3",
     "web3": "^0.15.3"
   },
   "semistandard": {
