Fixing tests and semistandard warnings

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "karma-babel-preprocessor": "6.0.1",
     "less": "^2.6.1",
     "less-loader": "^2.2.3",
+    "mocha": "^2.4.5",
     "mock-local-storage": "1.0.2",
     "nightwatch": "0.8.18",
     "postcss-loader": "^0.8.1",
