--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "webpack": "webpack",
+    "nightwatch": "nightwatch",
     "lint": "semistandard",
     "test": "mocha --compilers js:babel-core/register client/**/*.spec.js -w",
     "testOnce": "mocha --compilers js:babel-core/register client/**/*.spec.js",
@@ -33,7 +34,7 @@
     "less-loader": "^2.2.3",
     "mocha": "^2.4.5",
     "mock-local-storage": "1.0.2",
-    "nightwatch": "0.8.18",
+    "nightwatch": "^0.8.18",
     "postcss-loader": "^0.8.1",
     "pre-git": "^3.8.1",
     "react": "^15.0.0",
@@ -54,7 +55,8 @@
     "url-loader": "^0.5.7",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1",
-    "webpack-hot-middleware": "^2.7.1"
+    "webpack-hot-middleware": "^2.7.1",
+    "xhr-interceptor": "^1.3.0"
   },
   "dependencies": {
     "bignumber.js": "2.3.0",
