tests - add integrtaion test for travis WIP

--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "main": "index.js",
   "scripts": {
     "webpack": "webpack",
-    "startTest": "NODE_ENV=tests npm start",
     "nightwatch": "NODE_ENV=tests nightwatch",
     "lint": "semistandard",
-    "ci": "npm run lint && npm run testOnce",
+    "ci": "npm run nightwatch -- -e saucelabs",
     "test": "npm run testOnce -- -w",
     "testOnce": "mocha --compilers js:babel-core/register 'client/**/*.spec.js'",
     "start": "webpack-dev-server -d --history-api-fallback --hot --inline --progress --colors --port 3000",
+    "startTest": "NODE_ENV=tests npm start",
     "prebuild": "npm run clean",
     "build": "NODE_ENV=production webpack --progress --colors && cp Cargo.toml static",
     "clean": "rm static -rf || true",
