--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,24 @@ language: node_js
 env:
   global:
    - CXX=g++-4.8
-script: npm run ci
+
 node_js:
 - '5'
+
+cache:
+  directories:
+    - node_modules
+
+before_script:
+  - npm run startTest &
+  - sleep 15
+
+script: 
+  - npm run lint & npm run testOnce & npm run nightwatch -- -e saucelabs
+
 sudo: false
+
+addons:
+  sauce_connect:
+    username: "ethcoreHQ"
+    access_key: "d8781b6a-0899-4a6e-9138-b808d4d1ded3"
