--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,25 @@
+sudo: false
 language: node_js
-env:
-  global:
-   - CXX=g++-4.8
-
 node_js:
 - '5'
+
+env:
+  matrix:
+    - SCRIPT=lint
+    - SCRIPT=testOnce
+    - SCRIPT=nightwatchCI
+  global:
+    - CXX=g++-4.8
 
 cache:
   directories:
     - node_modules
 
 before_script:
-  - npm run startTest &
-  - sleep 15
+  - if [ "$SCRIPT" == "nightwatchCI" ]; then npm run startTest & fi
+  - if [ "$SCRIPT" == "nightwatchCI" ]; then sleep 15; fi
 
-script: 
-  - npm run lint & npm run testOnce & npm run nightwatch -- -e saucelabs
-
-sudo: false
+script: "npm run $SCRIPT"
 
 addons:
   sauce_connect:
