travis - load saucle lab addon only on integration tests

--- a/package.json
+++ b/package.json
@@ -88,6 +88,8 @@
         "./scripts/check-master.sh"
       ],
       "pre-push": [
+        "npm run lint",
+        "npm run testOnce"
       ],
       "post-commit": [],
       "post-checkout": [],
