--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "start": "webpack-dev-server -d --history-api-fallback --hot --inline --progress --colors --port 3000",
     "webpack": "webpack",
-    
     "commit": "commit-wizard",
     "lint": "semistandard",
     "ci": "npm run lint & npm run testOnce & npm run nightwatchCI",
@@ -15,7 +14,6 @@
     "nightwatch": "NODE_ENV=tests nightwatch",
     "nightwatchCI": "npm run nightwatch  -- -e saucelabs",
     "startTest": "NODE_ENV=tests npm start",
-    
     "prebuild": "npm run clean",
     "build": "NODE_ENV=production webpack --progress --colors && cp Cargo.toml static",
     "clean": "rm static -rf || true",
@@ -75,6 +73,7 @@
     "format-number": "2.0.1",
     "lodash": "4.11.1",
     "marked": "^0.3.5",
+    "material-ui": "0.15.0-beta.2",
     "rlp": "2.0.0",
     "store": "1.3.20",
     "web3": "^0.15.3"
