--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "lodash": "4.11.1",
     "marked": "^0.3.5",
     "material-ui": "0.15.0-beta.2",
+    "react-copy-to-clipboard": "4.1.0",
     "rlp": "2.0.0",
     "store": "1.3.20",
     "web3": "^0.15.3"
