--- a/package.json
+++ b/package.json
@@ -50,10 +50,11 @@
     "webpack-hot-middleware": "^2.7.1"
   },
   "dependencies": {
-    "classnames": "^2.2.3",
     "bignumber.js": "2.3.0",
+    "classnames": "^2.2.3",
     "lodash": "4.11.1",
     "material-ui": "0.15.0-beta.2",
+    "react-tap-event-plugin": "^1.0.0",
     "web3": "^0.15.3"
   },
   "semistandard": {
