--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "System UI for Parity dapp browser",
   "main": "client/index.js",
   "scripts": {
+    "install": "napa alexvandesande/blockies",
     "start": "webpack-dev-server -d --history-api-fallback --hot --inline --progress --colors --port 3010",
     "webpack": "webpack",
     "commit": "commit-wizard",
@@ -32,6 +33,7 @@
     "json-loader": "^0.5.4",
     "mocha": "^2.4.5",
     "mock-local-storage": "1.0.2",
+    "napa": "^2.3.0",
     "nightwatch": "0.8.18",
     "postcss-loader": "^0.8.1",
     "pre-git": "^3.8.1",
@@ -52,6 +54,7 @@
   "dependencies": {
     "bignumber.js": "2.3.0",
     "classnames": "^2.2.3",
+    "exports-loader": "^0.6.3",
     "lodash": "4.11.1",
     "material-ui": "0.15.0-beta.2",
     "react-tap-event-plugin": "^1.0.0",
