--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,6 @@
   "extends": ["semistandard", "standard-react"],
   "parser": "babel-eslint",
   "rules": {
-    "no-return-assign": 1,
-    "react/jsx-no-bind": 1
+    "no-return-assign": 1
   }
 }
