--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,4 @@
 {
   "extends": ["semistandard", "standard-react"],
-  "parser": "babel-eslint",
-  "rules": {
-    "no-return-assign": 1
-  }
+  "parser": "babel-eslint"
 }
