generate test coverage reports via npm run testCoverage

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "semistandard",
     "ci": "npm run lint & npm run testOnce & npm run nightwatchCI",
     "test": "npm run testOnce -- -w",
-    "testOnce": "mocha --compilers js:babel-core/register 'client/**/*.spec.js'",
+    "testCoverage": "babel-node node_modules/istanbul/lib/cli.js cover _mocha -- 'client/**/*.spec.js'",
+    "testOnce": "babel-node node_modules/.bin/_mocha 'client/**/*.spec.js'",
     "nightwatch": "NODE_ENV=tests nightwatch",
     "nightwatchCI": "npm run nightwatch  -- -e saucelabs",
     "startTest": "NODE_ENV=tests npm start",
@@ -23,6 +24,7 @@
   },
   "license": "GPL-3.0",
   "devDependencies": {
+    "babel-cli": "^6.8.0",
     "babel-core": "^6.5.2",
     "babel-eslint": "6.0.2",
     "babel-loader": "^6.2.3",
@@ -36,6 +38,7 @@
     "classnames": "^2.2.3",
     "css-loader": "^0.23.1",
     "file-loader": "^0.8.5",
+    "istanbul": "^1.0.0-alpha",
     "json-loader": "^0.5.4",
     "karma-babel-preprocessor": "6.0.1",
     "less": "^2.6.1",
