--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint-plugin-standard": "^1.3.2",
     "file-loader": "^0.8.5",
     "istanbul": "^1.0.0-alpha",
+    "jsdom": "^9.0.0",
     "json-loader": "^0.5.4",
     "karma-babel-preprocessor": "6.0.1",
     "less": "^2.6.1",
@@ -56,6 +57,7 @@
     "postcss-loader": "^0.8.1",
     "pre-git": "^3.8.1",
     "react": "^15.0.0",
+    "react-addons-test-utils": "^15.0.2",
     "react-dom": "^15.0.0",
     "react-hot-loader": "^1.3.0",
     "react-redux": "^4.4.0",
