--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,6 @@ env:
 matrix:
   include:
   - env: SCRIPT=lint
-  - env: SCRIPT=testCoverage
   - env: SCRIPT=coveralls
   - env: E2E=nightwatchCI
     addons:
@@ -28,8 +27,8 @@ cache:
     - node_modules
 
 script:
-  - npm run $SCRIPT
-  - if [ "$TRAVIS_REPO_SLUG" = "$REPO_SLUG" ]; then npm run startTest & sleep 25 & npm run $E2E; fi
+  - if [ "$SCRIPT" != "" ]; then npm run $SCRIPT; fi
+  - if [ "$E2E" != "" ] && [ "$TRAVIS_REPO_SLUG" = "$REPO_SLUG" ]; then npm run startTest & sleep 25 & npm run $E2E; fi
 
 after_success:
   - ./scripts/deploy-to-gh-pages.sh
