--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ cache:
 
 script:
   - if [ "$SCRIPT" != "" ]; then npm run $SCRIPT; fi
-  - if [ "$E2E" != "" ] && [ "$TRAVIS_PULL_REQUEST" == "false" ]; then npm run startTest & sleep 25 & npm run $E2E; fi
+  - if [ "$E2E" != "" ] && [ "$TRAVIS_PULL_REQUEST" == "false" ]; then npm run startTest & sleep 25 && npm run $E2E; fi
 
 after_success:
   - ./scripts/deploy-to-gh-pages.sh
