--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,7 @@
     "afterEach": true,
     "before": true,
     "beforeEach": true,
+    "context": true,
     "describe": true,
     "expect": true,
     "it": true
