--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "lint": "eslint --ignore-path .gitignore .",
     "ci": "npm run lint & npm run testOnce & npm run nightwatchCI",
     "test": "npm run testOnce -- -w",
-    "testCoverage": "babel-node node_modules/istanbul/lib/cli.js cover _mocha -- 'client/**/*.spec.js'",
-    "testOnce": "babel-node node_modules/.bin/_mocha 'client/**/*.spec.js'",
+    "testCoverage": "babel-node node_modules/istanbul/lib/cli.js cover _mocha -- --require ignore-styles 'client/**/*.spec.js'",
+    "testOnce": "babel-node node_modules/.bin/_mocha --require ignore-styles 'client/**/*.spec.js'",
     "nightwatch": "NODE_ENV=tests nightwatch",
     "nightwatchCI": "npm run nightwatch  -- -e saucelabs",
     "startTest": "NODE_ENV=tests npm start",
@@ -47,6 +47,7 @@
     "eslint-plugin-react": "^5.1.1",
     "eslint-plugin-standard": "^1.3.2",
     "file-loader": "^0.8.5",
+    "ignore-styles": "^2.0.0",
     "istanbul": "^1.0.0-alpha",
     "jsdom": "^9.0.0",
     "json-loader": "^0.5.4",
