--- a/package.json
+++ b/package.json
@@ -35,10 +35,12 @@
     "babel-preset-stage-0": "^6.5.0",
     "babel-runtime": "^6.5.0",
     "chai": "3.5.0",
+    "chai-enzyme": "^0.4.2",
     "chromedriver": "2.21.2",
     "classnames": "^2.2.3",
     "coveralls": "^2.11.9",
     "css-loader": "^0.23.1",
+    "enzyme": "^2.3.0",
     "eslint": "^2.9.0",
     "eslint-config-semistandard": "^6.0.1",
     "eslint-config-standard": "^5.3.1",
