--require ignore-styles moved to mocha.opts

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "lint": "eslint --ignore-path .gitignore .",
     "ci": "npm run lint & npm run testOnce & npm run nightwatchCI",
     "test": "npm run testOnce -- -w",
-    "testCoverage": "babel-node node_modules/istanbul/lib/cli.js cover _mocha -- --require ignore-styles 'client/**/*.spec.js'",
-    "testOnce": "babel-node node_modules/.bin/_mocha --require ignore-styles 'client/**/*.spec.js'",
+    "testCoverage": "babel-node node_modules/istanbul/lib/cli.js cover _mocha -- 'client/**/*.spec.js'",
+    "testOnce": "babel-node node_modules/.bin/_mocha 'client/**/*.spec.js'",
     "nightwatch": "NODE_ENV=tests nightwatch",
     "nightwatchCI": "npm run nightwatch  -- -e saucelabs",
     "startTest": "NODE_ENV=tests npm start",
