--- a/generate/package.json
+++ b/generate/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "glob": "^7.0.3",
-    "mime": "^1.3.4"
+    "mime": "^1.3.4",
+    "toml-js": "0.0.8"
   }
 }
