--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-description = "Mist wallet bundled for parity"
+description = "Ethereum Wallet Ðapp for Parity"
 name = "parity-wallet"
-version = "0.3.0"
+version = "0.4.0"
 license = "GPL-3.0"
-authors = ["Ethcore <admin@ethcore.io"]
+authors = ["Ethcore <admin@ethcore.io>"]
 
 [dependencies]
-parity-webapp = { git = "https://github.com/ethcore/parity-webapp.git" }
+parity-webapp = { git = "https://github.com/ethcore/parity-webapp.git", version = "0.2" }
