--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "classnames": "^2.2.3",
     "exports-loader": "^0.6.3",
     "lodash": "4.11.1",
-    "material-ui": "0.15.0-beta.2",
+    "material-ui": "0.15.0",
     "react-tap-event-plugin": "^1.0.0",
     "web3": "^0.15.3"
   },
