--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server -d --history-api-fallback --hot --inline --progress --colors --port 3000",
+    "startPerf": "NODE_ENV=perf-debug npm start",
+    "startTest": "NODE_ENV=tests npm start",
     "webpack": "webpack",
     "commit": "commit-wizard",
     "coveralls": "npm run testCoverage && coveralls < coverage/lcov.info",
@@ -15,7 +17,6 @@
     "testOnce": "babel-node node_modules/.bin/_mocha 'client/**/*.spec.js'",
     "nightwatch": "NODE_ENV=tests nightwatch",
     "nightwatchCI": "npm run nightwatch  -- -e saucelabs",
-    "startTest": "NODE_ENV=tests npm start",
     "prebuild": "npm run clean",
     "build": "NODE_ENV=production webpack --progress --colors && cp Cargo.toml static",
     "clean": "rm static -rf || true",
@@ -88,6 +89,7 @@
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1",
     "webpack-hot-middleware": "^2.7.1",
+    "why-did-you-update": "0.0.8",
     "xhr-interceptor": "^1.3.0"
   },
   "dependencies": {
