--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 description = "Ethereum Wallet Ðapp for Parity"
 name = "parity-wallet"
-version = "0.4.0"
+version = "0.4.1"
 license = "GPL-3.0"
-authors = ["Ethcore <admin@ethcore.io>"]
+authors = ["Alexander Van de Sande <alex.vandesande@ethdev.com>", "Fabian Vogelsteller <fabian.vogelsteller@gmail.com>"]
 
 [dependencies]
 parity-webapp = { git = "https://github.com/ethcore/parity-webapp.git", version = "0.2" }
