--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "bignumber.js": "2.3.0",
     "classnames": "^2.2.3",
     "exports-loader": "^0.6.3",
-    "lodash": "4.11.1",
+    "lodash.isequal": "^4.2.0",
     "material-ui": "0.15.0",
     "react-tap-event-plugin": "^1.0.0",
     "web3": "^0.15.3"
