--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,27 @@ name = "parity-webapp"
 version = "0.2.0"
 license = "GPL-3.0"
 authors = ["Ethcore <admin@ethcore.io"]
+build = "build.rs"
+
+[build-dependencies]
+quasi_codegen = { version = "0.10", optional = true }
+syntex = { version = "*", optional = true }
 
 [dependencies]
+glob = { version = "0.2.11" }
+mime_guess = { version = "1.6.1" }
+aster = { version = "0.16", default-features = false }
+quasi = { version = "0.10", default-features = false }
+quasi_macros = { version = "0.10", optional = true }
+syntex = { version = "0.32", optional = true }
+syntex_syntax = { version = "0.32", optional = true }
 clippy = { version = "0.0.67", optional = true }
 
 [features]
 dev = ["clippy"]
+default = ["with-syntex"]
+nightly = ["quasi_macros"]
+nightly-testing = ["clippy"]
+with-syntex = ["quasi/with-syntex", "quasi_codegen", "quasi_codegen/with-syntex", "syntex", "syntex_syntax"]
+
+
