--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,18 @@
 [package]
 description = "Injectable identity manager for Parity"
 name = "parity-idmanager"
-version = "0.4.0"
+version = "0.5.0"
 license = "GPL-3.0"
 authors = ["Ethcore <admin@ethcore.io>"]
+build = "build.rs"
+
+[features]
+default = ["with-syntex"]
+with-syntex = ["parity-webapp/with-syntex"]
+
+[build-dependencies]
+parity-webapp = { git = "https://github.com/ethcore/parity-webapp.git", version = "0.3" }
 
 [dependencies]
-parity-webapp = { git = "https://github.com/ethcore/parity-webapp.git", version = "0.2" }
+parity-webapp = { git = "https://github.com/ethcore/parity-webapp.git", version = "0.3" }
+
