--- a/src/lib.rs.in
+++ b/src/lib.rs.in
@@ -15,6 +15,8 @@
 // along with Parity.  If not, see <http://www.gnu.org/licenses/>.
 //
 
+extern crate quasi;
+
 mod codegen;
 mod build;
 pub use build::inner::build;
