--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,18 @@
 [package]
 description = "Ethereum Wallet Ðapp for Parity"
 name = "parity-wallet"
-version = "0.4.1"
+version = "0.5.0"
 license = "GPL-3.0"
 authors = ["Alexander Van de Sande <alex.vandesande@ethdev.com>", "Fabian Vogelsteller <fabian.vogelsteller@gmail.com>"]
+build = "build.rs"
+
+[features]
+default = ["with-syntex"]
+with-syntex = ["parity-webapp/with-syntex"]
+
+[build-dependencies]
+parity-webapp = { git = "https://github.com/ethcore/parity-webapp.git", version = "0.3" }
 
 [dependencies]
-parity-webapp = { git = "https://github.com/ethcore/parity-webapp.git", version = "0.2" }
+parity-webapp = { git = "https://github.com/ethcore/parity-webapp.git", version = "0.3" }
+
