--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "ci": "npm run lint & npm run testOnce & npm run nightwatchCI",
     "test": "npm run testOnce -- -w",
     "testCoverage": "babel-node node_modules/istanbul/lib/cli.js cover _mocha -- 'client/**/*.spec.js'",
-    "testOnce": "babel-node node_modules/.bin/_mocha 'client/**/*.spec.js'",
+    "testOnce": "mocha 'client/**/*.spec.js'",
     "nightwatch": "NODE_ENV=tests nightwatch",
     "nightwatchCI": "npm run nightwatch  -- -e saucelabs",
     "prebuild": "npm run clean",
@@ -34,6 +34,7 @@
     "url": "https://github.com/ethcore/eth-node-status-page/issues"
   },
   "devDependencies": {
+    "babel": "6.5.2",
     "babel-cli": "^6.8.0",
     "babel-core": "^6.5.2",
     "babel-eslint": "6.0.2",
@@ -42,6 +43,7 @@
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
+    "babel-register": "6.9.0",
     "babel-runtime": "^6.5.0",
     "chai": "3.5.0",
     "chai-enzyme": "^0.4.2",
