--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "dapps-react-ui",
-  "version": "0.0.0",
+  "version": "0.0.32",
   "description": "React ui reusable components for dapps",
-  "main": "./src/index.js",
+  "main": "./index.js",
   "scripts": {
     "install": "napa alexvandesande/blockies",
     "start": "webpack-dev-server -d --history-api-fallback --hot --inline --progress --colors --port 3000",
@@ -17,6 +17,7 @@
     "testOnce": "mocha 'src/**/*.spec.js'",
     "prebuild": "npm run clean",
     "build": "NODE_ENV=production webpack --progress --colors",
+    "customPublish": "./scripts/publish.sh",
     "clean": "rm build -rf"
   },
   "repository": {
