--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "dapps-react-ui",
-  "version": "0.0.37",
+  "version": "0.0.39",
   "description": "React ui reusable components for dapps",
-  "main": "./index.js",
+  "main": "./build/index.js",
   "scripts": {
     "install": "napa alexvandesande/blockies",
     "start": "webpack-dev-server -d --history-api-fallback --hot --inline --progress --colors --port 3000",
