--- a/.npmignore
+++ b/.npmignore
@@ -1,14 +1,15 @@
 src/
+build/
+node_modules/
+scripts/
+test/
 npm-debug.log
-node_modules
-scripts
-test
 .babelrc
 .editorconfig
-.esintrc.json
+.eslintrc.json
 .gitignore
-.itanbul.yml
+.istanbul.yml
 .npmignore
 .travis.yml
-.CHANGELOG.md
+CHANGELOG.md
 webpack.config.js
