--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dapps-react-ui",
   "version": "0.0.40",
   "description": "React ui reusable components for dapps",
-  "main": "./build/index.js",
+  "main": "./src/index.js",
   "scripts": {
     "install": "napa alexvandesande/blockies",
     "start": "webpack-dev-server -d --history-api-fallback --hot --inline --progress --colors --port 3000",
