--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
   },
   "dependencies": {
     "classnames": "^2.2.3",
+    "ethereum-rpc-json": "0.0.0",
     "lodash.isequal": "^4.2.0",
     "material-ui": "0.15.0",
     "napa": "2.3.0",
