--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dapps-react-ui",
-  "version": "0.0.44",
+  "version": "0.0.45",
   "description": "React ui reusable components for dapps",
   "main": "./index.js",
   "scripts": {
@@ -38,11 +38,12 @@
   },
   "peerDependencies": {
     "react": "^15.0.0",
-    "material-ui": "0.15.0",
+    "material-ui": "^0.15.0",
     "react-tap-event-plugin": "^1.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.5.2",
+    "material-ui": "^0.15.0",
     "babel-eslint": "6.0.2",
     "babel-loader": "^6.2.3",
     "babel-plugin-transform-runtime": "^6.5.2",
