--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dapps-react-ui",
-  "version": "0.0.49",
+  "version": "0.0.50",
   "description": "React ui reusable components for dapps",
   "main": "./index.js",
   "scripts": {
@@ -43,6 +43,7 @@
   },
   "devDependencies": {
     "babel-core": "^6.5.2",
+    "web3": "0.16.0",
     "material-ui": "^0.15.0",
     "babel-eslint": "6.0.2",
     "babel-loader": "^6.2.3",
@@ -96,8 +97,7 @@
     "classnames": "^2.2.3",
     "ethereum-rpc-json": "*",
     "lodash.isequal": "^4.2.0",
-    "napa": "^2.3.0",
-    "web3": "0.16.0"
+    "napa": "^2.3.0"
   },
   "config": {
     "pre-git": {
