--- a/package.json
+++ b/package.json
@@ -98,12 +98,13 @@
     "browser-request": "0.3.3",
     "bytes": "2.3.0",
     "dapp-styles": "^0.2.2",
+    "dapps-react-ui": "0.0.54",
     "format-json": "1.0.3",
     "format-number": "2.0.1",
     "history": "2.1.1",
     "lodash": "4.11.1",
     "marked": "^0.3.5",
-    "material-ui": "0.15.0-beta.2",
+    "material-ui": "^0.15.0",
     "react-addons-css-transition-group": "15.0.2",
     "react-copy-to-clipboard": "4.1.0",
     "react-tap-event-plugin": "1.0.0",
