--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "exports-loader": "^0.6.3",
     "lodash.isequal": "^4.2.0",
     "material-ui": "0.15.0",
+    "react-copy-to-clipboard": "^4.1.0",
     "react-tap-event-plugin": "^1.0.0",
     "web3": "^0.15.3"
   },
