--- a/package.json
+++ b/package.json
@@ -43,8 +43,6 @@
   },
   "devDependencies": {
     "babel-core": "^6.5.2",
-    "web3": "0.16.0",
-    "material-ui": "^0.15.0",
     "babel-eslint": "6.0.2",
     "babel-loader": "^6.2.3",
     "babel-plugin-transform-runtime": "^6.5.2",
@@ -53,6 +51,11 @@
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "6.9.0",
     "babel-runtime": "^6.5.0",
+    "chai": "3.5.0",
+    "chai-enzyme": "0.4.2",
+    "cheerio": "0.20.0",
+    "css-loader": "^0.23.1",
+    "enzyme": "2.3.0",
     "eslint": "^2.9.0",
     "eslint-config-semistandard": "^6.0.1",
     "eslint-config-standard": "^5.3.1",
@@ -60,37 +63,35 @@
     "eslint-plugin-promise": "^1.1.0",
     "eslint-plugin-react": "^5.1.1",
     "eslint-plugin-standard": "^1.3.2",
-    "chai": "3.5.0",
-    "chai-enzyme": "0.4.2",
-    "cheerio": "0.20.0",
-    "css-loader": "^0.23.1",
-    "enzyme": "2.3.0",
+    "exports-loader": "0.6.3",
     "file-loader": "^0.8.5",
     "ignore-styles": "2.0.0",
+    "image-webpack-loader": "^1.8.0",
     "istanbul": "0.4.3",
     "jsdom": "9.2.1",
     "json-loader": "^0.5.4",
+    "material-ui": "^0.15.0",
     "mocha": "^2.4.5",
     "mock-local-storage": "1.0.2",
+    "napa": "2.3.0",
     "postcss-loader": "^0.8.1",
     "pre-git": "^3.8.1",
-    "react-addons-test-utils": "15.1.0",
     "react": "^15.0.0",
+    "react-addons-test-utils": "15.1.0",
     "react-dom": "^15.0.0",
     "react-hot-loader": "^1.3.0",
     "react-router": "^2.0.0",
+    "react-tap-event-plugin": "^1.0.0",
     "rucksack-css": "^0.8.5",
     "semistandard": "^7.0.5",
     "sinon": "1.17.3",
     "sinon-chai": "2.8.0",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
+    "web3": "0.16.0",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1",
     "webpack-error-notification": "0.1.6",
-    "exports-loader": "0.6.3",
-    "react-tap-event-plugin": "^1.0.0",
-    "napa": "2.3.0",
     "webpack-hot-middleware": "^2.7.1"
   },
   "dependencies": {
