--- a/package.json
+++ b/package.json
@@ -67,12 +67,13 @@
     "style-loader": "^0.13.1",
     "webpack": "^1.13.0",
     "webpack-error-notification": "0.1.6",
+    "webpack-hot-middleware": "^2.10.0",
     "webpack-httpolyglot-server": "^0.2.0"
   },
   "dependencies": {
     "bluebird": "^3.3.4",
     "classnames": "^2.1.3",
-    "dapps-react-ui": "0.0.61",
+    "dapps-react-ui": "0.0.64",
     "exports-loader": "0.6.3",
     "lodash.isequal": "4.2.0",
     "material-ui": "^0.15.0",
