--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "material-ui": "0.15.0",
     "react-copy-to-clipboard": "^4.1.0",
     "react-tap-event-plugin": "^1.0.0",
-    "web3": "^0.15.3"
+    "web3": "^0.15.3",
+    "whatwg-fetch": "^1.0.0"
   },
   "semistandard": {
     "parser": "babel-eslint"
