fix gitignore, manifest, update dapps-react-ui

--- a/chrome/manifest.prod.json
+++ b/chrome/manifest.prod.json
@@ -4,17 +4,13 @@
   "manifest_version": 2,
   "description": "Parity system ui",
   "browser_action": {
-    "default_title": "React Chrome Extension Example",
-    "default_popup": "popup.html"
-  },
-  "icons": {
-    "16": "img/icon-16.png",
-    "48": "img/icon-48.png",
-    "128": "img/icon-128.png"
+    "default_title": "Parity system ui",
+    "default_popup": "popup.html",
+    "default_icon": "img/icon-16.png"
   },
   "background": {
     "page": "background.html"
   },
   "permissions": [ "storage", "proxy" ],
-  "content_security_policy": "default-src 'self'; connect-src ws://localhost:8180; script-src 'self'; style-src * 'unsafe-inline'; img-src 'self' data:;"
+  "content_security_policy": "default-src 'self'; connect-src ws://localhost:8180; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data:;"
 }
