--- a/package.json
+++ b/package.json
@@ -70,6 +70,8 @@
     "classnames": "^2.1.3",
     "dapps-react-ui": "0.0.65",
     "exports-loader": "0.6.3",
+    "js-sha3": "^0.5.2",
+    "lodash.assign": "^4.0.9",
     "lodash.isequal": "4.2.0",
     "material-ui": "^0.15.0",
     "napa": "2.3.0",
