--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "eslint-plugin-standard": "^1.3.2",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
+    "ignore-styles": "^3.0.0",
     "jade": "^1.11.0",
     "jsdom": "^8.5.0",
     "json-loader": "^0.5.4",
@@ -74,6 +75,7 @@
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
     "mocha": "^2.5.3",
+    "mock-local-storage": "^1.0.2",
     "nightwatch": "^0.9.3",
     "postcss-loader": "^0.9.1",
     "pre-git": "^3.8.4",
