add option to config ws path

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "parity-sysui-app",
   "version": "0.0.0",
   "description": "reusable app for Parity's system UIs",
-  "main": "index.js",
+  "main": "build/index.js",
   "scripts": {
     "start": "webpack-dev-server -d --history-api-fallback --hot --inline --progress --colors --port 3001",
     "test": "npm run testOnce -- -w",
