--- a/package.json
+++ b/package.json
@@ -104,7 +104,7 @@
     "dapps-react-ui": "0.0.65",
     "event-emitter": "^0.3.4",
     "exports-loader": "0.6.3",
-    "history": "2.1.1",
+    "history": "^2.1.1",
     "js-sha3": "^0.5.2",
     "lodash.assign": "^4.0.9",
     "lodash.isequal": "4.2.0",
@@ -116,6 +116,7 @@
     "react-dom": "^15.0.2",
     "react-redux": "^4.3.0",
     "react-tap-event-plugin": "^1.0.0",
+    "react-tooltip": "^2.0.3",
     "redux": "^3.2.1",
     "redux-actions": "0.9.1",
     "redux-thunk": "^2.0.1",
