--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "eslint-plugin-standard": "^1.3.2",
     "exports-loader": "0.6.3",
     "file-loader": "^0.8.5",
+    "history": "^3.0.0",
     "ignore-styles": "2.0.0",
     "image-webpack-loader": "^1.8.0",
     "istanbul": "0.4.3",
@@ -79,8 +80,12 @@
     "react-addons-test-utils": "15.1.0",
     "react-dom": "^15.0.0",
     "react-hot-loader": "^1.3.0",
-    "react-router": "^2.0.0",
+    "react-redux": "^4.4.5",
+    "react-router": "^2.4.1",
+    "react-router-redux": "^4.0.5",
     "react-tap-event-plugin": "^1.0.0",
+    "redux": "^3.5.2",
+    "redux-actions": "^0.10.0",
     "rucksack-css": "^0.8.5",
     "semistandard": "^7.0.5",
     "sinon": "1.17.3",
