--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "peerDependencies": {
     "react": "^15.0.0",
     "material-ui": "^0.15.0",
+    "react-addons-css-transition-group": "^15.1.0",
     "react-tap-event-plugin": "^1.0.0"
   },
   "devDependencies": {
@@ -77,6 +78,7 @@
     "postcss-loader": "^0.8.1",
     "pre-git": "^3.8.1",
     "react": "^15.0.0",
+    "react-addons-css-transition-group": "^15.1.0",
     "react-addons-test-utils": "15.1.0",
     "react-dom": "^15.0.0",
     "react-hot-loader": "^1.3.0",
