--- a/package.json
+++ b/package.json
@@ -110,8 +110,9 @@
     "lodash.isequal": "4.2.0",
     "material-ui": "^0.15.0",
     "napa": "2.3.0",
+    "rc-slider": "^3.7.1",
     "react": "^15.0.2",
-    "react-addons-css-transition-group": "15.0.2",
+    "react-addons-css-transition-group": "^15.0.2",
     "react-copy-to-clipboard": "4.1.0",
     "react-dom": "^15.0.2",
     "react-redux": "^4.3.0",
