--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "xhr-interceptor": "^1.3.0"
   },
   "dependencies": {
+    "babel-polyfill": "^6.9.1",
     "dapps-react-ui": "0.0.67",
     "event-emitter": "^0.3.4",
     "exports-loader": "0.6.3",
