--- a/chrome/manifest.prod.json
+++ b/chrome/manifest.prod.json
@@ -12,5 +12,5 @@
     "page": "background.html"
   },
   "permissions": [ "storage", "proxy", "notifications" ],
-  "content_security_policy": "default-src 'self'; connect-src ws://127.0.0.1:*; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:;"
+  "content_security_policy": "default-src 'self'; font-src 'self' data:; connect-src ws://127.0.0.1:*; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:;"
 }
