--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "parity-sysui-app",
-  "version": "0.0.17",
+  "version": "0.0.18",
   "description": "reusable app for Parity's system UIs",
   "main": "./build/index.js",
   "scripts": {
@@ -8,7 +8,7 @@
     "test": "npm run testOnce -- -w",
     "startPerf": "NODE_ENV=perf-debug npm start",
     "startTest": "NODE_ENV=tests npm start",
-    "webpack": "webpack",
+    "webpack": "webpack --progress --colors",
     "coveralls": "npm run testCoverage && coveralls < coverage/lcov.info",
     "lint": "eslint --ignore-path .gitignore .",
     "testCoverage": "istanbul cover _mocha -- 'app/**/*.spec.js'",
